/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package bookkeeper.proto.examples.state;

option java_multiple_files = true;
option java_package = "org.apache.bookkeeper.examples.state";

// a no-op
message Noop {
}

// operation to add a value to the replicated set
message AddValueOp {
    bytes value = 1;
}

// operation to remove a value from the replicated set
message RemoveValueOp {
    bytes value = 1;
}

message Command {
    oneof op {
        Noop no_op              = 1;
        AddValueOp add_op       = 2;
        RemoveValueOp remove_op = 3;
    }
}
